cmake should now be fully functional. This ends autotools support.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,3 +14,7 @@ add_subdirectory(libBlitzFFTW)
 add_subdirectory(libArrayToolbox)
 add_subdirectory(libsegmentation)
 add_subdirectory(liblabelling_qt4)
+add_subdirectory(labelling)
+add_subdirectory(libIRoCS)
+add_subdirectory(tools)
+add_subdirectory(plugins)
