--- a/src/lmbs2kit/CMakeLists.txt
+++ b/src/lmbs2kit/CMakeLists.txt
@@ -1,23 +1,29 @@
-add_library(lmbs2kit
-  seminaive.c FST_semi_memo.c primitive.c cospmls.c pmls.c naive_synthesis.c
-  makeweights.c csecond.c seminaive.h FST_semi_memo.h primitive.h cospmls.h
-  pmls.h naive_synthesis.h makeweights.h csecond.h )
 set(lmbs2kit_VERSION_MAJOR 1)
 set(lmbs2kit_VERSION_MINOR 0)
 set(lmbs2kit_VERSION_PATCH 0)
 set(lmbs2kit_VERSION ${lmbs2kit_VERSION_MAJOR}.${lmbs2kit_VERSION_MINOR}.${lmbs2kit_VERSION_PATCH})
-set_target_properties(lmbs2kit PROPERTIES VERSION ${lmbs2kit_VERSION} SOVERSION ${lmbs2kit_VERSION_MAJOR})
 
-target_include_directories(lmbs2kit INTERFACE
-  ${FFTW3_INCLUDE_DIRS} ${FFTW3F_INCLUDE_DIRS} )
-target_link_libraries(lmbs2kit ${FFTW3_LIBRARIES} ${FFTW3F_LIBRARIES} )
+set(lmbs2kit_HEADERS
+  seminaive.h FST_semi_memo.h primitive.h cospmls.h pmls.h naive_synthesis.h
+  makeweights.h csecond.h)
+set(lmbs2kit_SOURCES
+  seminaive.c FST_semi_memo.c primitive.c cospmls.c pmls.c naive_synthesis.c
+  makeweights.c csecond.c)
+
+add_library(lmbs2kit ${lmbs2kit_SOURCES} ${lmbs2kit_HEADERS})
+set_target_properties(lmbs2kit PROPERTIES
+  VERSION ${lmbs2kit_VERSION} SOVERSION ${lmbs2kit_VERSION_MAJOR})
+
+target_include_directories(lmbs2kit PUBLIC
+  ${FFTW3_INCLUDE_DIRS} ${FFTW3F_INCLUDE_DIRS})
+target_link_libraries(lmbs2kit ${FFTW3_LIBRARIES} ${FFTW3F_LIBRARIES})
 
 if(UNIX)
   target_link_libraries(lmbs2kit m)
 endif()
 
 # Install development headers
-install(DIRECTORY . DESTINATION include/lmbs2kit FILES_MATCHING PATTERN "*.h" )
+install(FILES ${lmbs2kit_HEADERS} DESTINATION include/${PACKAGE}/lmbs2kit)
 
 # Install libraries
 if(WIN32)
@@ -34,13 +40,10 @@ endif(WIN32)
 # Explicitly add static library build if both static and shared libraries
 # are requested
 if(BUILD_STATIC_LIBS AND BUILD_SHARED_LIBS)
-  add_library(lmbs2kit_static STATIC
-    seminaive.c FST_semi_memo.c primitive.c cospmls.c pmls.c naive_synthesis.c
-    makeweights.c csecond.c seminaive.h FST_semi_memo.h primitive.h cospmls.h
-    pmls.h naive_synthesis.h makeweights.h csecond.h )
-  target_include_directories(lmbs2kit_static INTERFACE
-    ${FFTW3_INCLUDE_DIRS} ${FFTW3F_INCLUDE_DIRS} )
-  target_link_libraries(lmbs2kit_static ${FFTW3_LIBRARIES} ${FFTW3F_LIBRARIES} )
+  add_library(lmbs2kit_static STATIC ${lmbs2kit_SOURCES} ${lmbs2kit_HEADERS})
+  target_include_directories(lmbs2kit_static PUBLIC
+    ${FFTW3_INCLUDE_DIRS} ${FFTW3F_INCLUDE_DIRS})
+  target_link_libraries(lmbs2kit_static ${FFTW3_LIBRARIES} ${FFTW3F_LIBRARIES})
 
   if(UNIX)
     target_link_libraries(lmbs2kit_static m)
